created game logic - card turn needs fixing

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a {
 	font-family: Raleway;
 	/* changed from original color as it appeared blue
 	when nav was set as #FFFFFF */ 
-	color: #FFFFFF;
+	color: #C0C0C0;
 	letter-spacing: 1px;
 	font-weight: 600px;
 	font-size: 18px;
